--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			video: {facingMode: 'environment'}
 		};
 
-		navigator.mediaDevies.getUserMedia(constraints)
+		navigator.mediaDevices.getUserMedia(constraints)
 		.then(stream => {
 			console.log(stream);
 			const video = document.querySelector('#video');
