--- a/index.html
+++ b/index.html
@@ -2,38 +2,56 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="instascan.min.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/nimiq/qr-scanner/master/qr-scanner.min.js"></script>
 </head>
 <body>
 	<video id="video"></video>
 	<button>Switch Camera</button>
 
 	<script type="text/javascript">
-		const current_cam = 'environment';
-		const constraints = {video: {facingMode: current_cam}};
+		let current_cam = 'environment';
+		let qrScanner = createScanner(current_cam);
 
-		displayCamera(constraints);
+      		qrScanner.start();
 
 		document.querySelector('button').addEventListener('click', function(){
-			if (current_cam == 'environment')
-				constraints.video.facingMode = 'user';
-			else
-				constraints.video.facingMode = 'environment';
+				if (current_cam == 'environment')
+					current_cam = 'user';
+				else
+					current_cam = 'environment';
 
-			displayCamera(constraints);
-		});
+				qrScanner.destroy();
 
-		function displayCamera(constraints) {
-			const video = document.querySelector('#video');
-
-			navigator.mediaDevices.getUserMedia(constraints)
-			.then(stream => {
-				video.srcObject = stream;
-				video.play();
-			}).catch(err => {
-				console.log(err)
+				qrScanner = createScanner(current_cam);
 			});
-		}
+
+		    function handleQRContent(content) {
+			console.log(content);
+
+			if(content == '1') {
+				flash('success');
+			}
+			else if(content = '0') {
+				flash('fail');
+			}
+		    }
+
+		    function createScanner(camera) {
+			const video = document.querySelector('video');
+
+			return new QrScanner(video, handleQRContent, undefined, undefined, camera);
+		    }
+
+		    function flash(type) {
+			let color;
+
+			if(type == 'success')
+				color = 0x07da63;
+			else if (type == 'fail')
+				color = 0xcc0000
+
+			document.body.style.backgroundColor = color;
+		   }
 	</script>
 </body>
 </html>
