--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="qr-scanner.min.js"></script>
+	<script type="text/javascript" src="https://raw.githubusercontent.com/nimiq/qr-scanner/master/qr-scanner.min.js"></script>
 </head>
 <body>
 	<video id="video"></video>
