--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<button>Switch Camera</button>
 
 	<script type="text/javascript">
-		let current_cam = 'environment';
+		let current_cam = 'user';
 		let qrScanner = createScanner(current_cam);
 
       	qrScanner.start();
