--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<button>Switch Camera</button>
 
 	<script type="text/javascript">
-		//123
 		let current_cam = 'environment';
 		let qrScanner = createScanner(current_cam);
 		let scanInterval;
@@ -41,7 +40,7 @@
 	    }
 
 	    function handleError(err){
-	    	//console.log(err);
+	    	console.log(err);
 	    }
 
 	    function setupScanning() {
