--- a/index.html
+++ b/index.html
@@ -2,35 +2,49 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="qr-scanner.min.js"></script>
+	<script type="text/javascript" src="instascan.min.js"></script>
 </head>
 <body>
 	<video id="video"></video>
-	<button>Switch Camera</button>
 
 	<script type="text/javascript">
-		let current_cam = 'environment';
-		let qrScanner = createScanner(current_cam);
-		let scanInterval;
+		// const video = document.querySelector('#video');
 
-      	//qrScanner.start();
+		// navigator.mediaDevices.getUserMedia(constraints)
+		// .then(stream => {
+		// 	video.srcObject = stream;
+		// 	video.play();
+		// }).catch(err => {
+		// 	console.log(err)
+		// });
 
-      	setupScanning();
+		let scanner = new Instascan.Scanner({ video: document.querySelector('#video'), mirror: false });
+      	scanner.addListener('scan', content => {
+      		handleQRContent(content);
+        	console.log(content);
+      	});
 
-      	document.querySelector('button').addEventListener('click', function(){
-			if (current_cam == 'environment')
-				current_cam = 'user';
-			else
-				current_cam = 'environment';
+      	Instascan.Camera.getCameras().then(cameras => {
+      		console.log(cameras);
+      		let camera;
 
-			destroyScanner(qrScanner);
-
-			qrScanner = createScanner(current_cam);
-		});
+		    if (cameras.length > 0) {
+		    	for (var i = 0; i < cameras.length; i++) {
+		    		if(cameras[i].name.indexOf('back') >= 0)
+		    			camera = cameras[i];
+		    		break;
+		    	}
+		    	if(camera != undefined)
+		      		scanner.start(camera);
+		    } else {
+		      console.error('No cameras found.');
+		    }
+        }).catch(function (e) {
+		    console.error(e);
+	    });
 
 	    function handleQRContent(content) {
 	    	console.log(content);
-
 	    	if(content == '1') {
 	    		flash('success');
 	    	}
@@ -39,53 +53,16 @@
 	    	}
 	    }
 
-	    function handleError(err){
-	    	console.log(err);
-	    }
-
-	    function setupScanning() {
-	    	clearInterval(scanInterval);
-	    	document.querySelector('video').remove();
-
-	    	const video = document.createElement('video');
-	    	document.body.appendChild(video);
-
-	    	navigator.mediaDevices.getUserMedia({video: {facingMode: 'environment'}})
-    		.then(stream => {
-    			video.srcObject = stream;
-    			video.play();
-    		})
-    		.catch(err => console.log(err));
-
-	    	scanInterval = setInterval(function(){ 
-	    		QrScanner.scanImage(video)
-    			.then(handleQRContent)
-    			.catch(handleError);
-	    	}, 500);
-	    }
-
-	    function createScanner(camera) {
-	    	const video = document.createElement('video');
-	    	document.body.appendChild(video);
-
-	    	return new QrScanner(video, handleQRContent, handleError, undefined, camera);
-	    }
-
-	    function destroyScanner(scanner) {
-	    	scanner.$video.remove();
-	    	scanner.destroy()
-	    }
-
 	    function flash(type) {
 	    	let color;
 
 	    	if(type == 'success')
 	    		color = 0x07da63;
 	    	else if (type == 'fail')
-	    		color = 0xcc0000
+	    		color = 0xcc0000;
 
 	    	document.body.style.backgroundColor = color;
-	   }
+	    }
 	</script>
 </body>
 </html>
