--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<video id="video"></video>
 
 	<script type="text/javascript">
+		//123
 		// const video = document.querySelector('#video');
 
 		// navigator.mediaDevices.getUserMedia(constraints)
@@ -35,6 +36,8 @@
 		    		break;
 		    	}
 		    	if(camera != undefined)
+		    		console.log('camera found');
+		    		console.log('camera')
 		      		scanner.start(camera);
 		    } else {
 		      console.error('No cameras found.');
