--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		    	}
 		    	if(camera != undefined){
 		    		console.log('camera found');
-		    		console.log('camera');
+		    		console.log(camera);
 		      		scanner.start(camera);
 		      	}
 		    } else {
