--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		    		console.log(camera);
 		      		scanner.start(camera);
 		      	}
+		      	else
+		      		camera = cameras[0];
 		    } else {
 		      console.error('No cameras found.');
 		    }
