--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
 	    function handleQRContent(content) {
 	    	console.log(content);
-	    	if(content == '1') {
+	    	if(content == 1) {
 	    		flash('success');
 	    	}
-	    	else if(content = '0') {
+	    	else if(content == 0) {
 	    		flash('fail');
 	    	}
 	    }
