--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 	    	let color;
 
 	    	if(type == 'success')
-	    		color = 0x07da63;
+	    		color = '#07da63';
 	    	else if (type == 'fail')
-	    		color = 0xcc0000;
+	    		color = '#cc0000';
 
 	    	document.body.style.backgroundColor = color;
 	    }
