--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	    function handleQRContent(content) {
 	    	console.log(content);
-	    	document.querySelector(div).textContent = content;
+	    	document.querySelector('div').textContent = content;
 	    	if(content == 1) {
 	    		flash('success');
 	    	}
