--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="instascan.min.js"></script>
 </head>
 <body>
-	<div style="background-color: 'white'; font-size: 20px;"></div>
+	<div style="background-color: white; font-size: 42px; text-align: center"></div>
 	<video id="video"></video>
 
 	<script type="text/javascript">
