--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 	<video id="video"></video>
 
 	<script type="text/javascript">
+		Instascan.Camera.getCameras().then(cameras => {
+			let div = document.createElement('div');
+			let text = cameras.map(c => c.name).join("\n");
+			div.textContent = text;
+			div.style.backgroundColor = 'white';
+			div.style.fontSize = '42px';
+
+			document.body.appendChild(div);
+		}
 		// const video = document.querySelector('#video');
 
 		// navigator.mediaDevices.getUserMedia(constraints)
