--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<video id="video"></video>
 
 	<script type="text/javascript">
+		//123
 		Instascan.Camera.getCameras().then(cameras => {
 			let div = document.createElement('div');
 			let text = cameras.map(c => c.name).join("<br>");
@@ -52,9 +53,10 @@
 		      			camera = cameras[0];
 		      	}
 				
-				try
+				try {
 					scanner.start(camera);
-				catch e {
+				}
+				catch (e) {
 					alert(e);
 				}
 		      	
