--- a/instascan.html
+++ b/instascan.html
@@ -1,76 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script type="text/javascript" src="instascan.min.js"></script>
+  <title></title>
+  <script type="text/javascript" src="instascan.min.js"></script>
 </head>
 <body>
-	<div style="background-color: white; font-size: 42px; text-align: center"></div>
-	<video id="video"></video>
+  <div style="background-color: white; font-size: 42px; text-align: center"></div> <!-- TODO: REMOVE -->
+  <video id="video"></video> <!-- TODO: REMOVE-->
 
-	<script type="text/javascript">
-		// const video = document.querySelector('#video');
+  <script type="text/javascript">
+    const LOGGING = true; // Если true, выводим в консоль отсканированный код
+    const REMOTE_ADDRESS = 'localhost'; // Адрес, на который посылаем отсканированный код
+    const REQUEST_METHOD = 'GET'; // Метод запроса, используемый при отсылке кода
+    const PARAM_NAME = 'code'; // Имя параметра запроса, в котором будем передавать код
 
-		// navigator.mediaDevices.getUserMedia(constraints)
-		// .then(stream => {
-		// 	video.srcObject = stream;
-		// 	video.play();
-		// }).catch(err => {
-		// 	console.log(err)
-		// });
+    const scanner = new Instascan.Scanner({
+      video: document.querySelector('#video'), // TODO: REMOVE
+      mirror: false
+    });
 
-		let scanner = new Instascan.Scanner({ video: document.querySelector('#video'), mirror: false });
-      	scanner.addListener('scan', content => {
-      		handleQRContent(content);
-        	console.log(content);
-      	});
+    scanner.addListener('scan', handleQRContent);
 
-      	Instascan.Camera.getCameras().then(cameras => {
-      		console.log(cameras);
-      		let camera;
+    Instascan.Camera.getCameras().then(cameras => {
+      let camera;
 
-		    if (cameras.length > 0) {
-		    	for (var i = 0; i < cameras.length; i++) {
-		    		if(cameras[i].name.indexOf('back') >= 0){
-		    			camera = cameras[i];
-		    			break;
-		    		}
-		    	}
-		    	if(camera != undefined){
-		    		console.log('camera found');
-		    		console.log(camera);
-		      		scanner.start(camera);
-		      	}
-		      	else
-		      		camera = cameras[0];
-		    } else {
-		      console.error('No cameras found.');
-		    }
-        }).catch(function (e) {
-		    console.error(e);
-	    });
+      if (cameras.length > 0) {
+        for (let i = 0; i < cameras.length; i++) {
+          if(cameras[i].name.indexOf('back') >= 0){
+            camera = cameras[i];
+            break;
+          }
+        }
 
-	    function handleQRContent(content) {
-	    	console.log(content);
-	    	document.querySelector('div').textContent = content;
-	    	if(content == 1) {
-	    		flash('success');
-	    	}
-	    	else if(content == 0) {
-	    		flash('fail');
-	    	}
-	    }
+        if(camera == undefined){
+          if(isIos())
+            camera = cameras[1];
+          else
+            camera = cameras[0];
+        }
+      
+        scanner.start(camera);  
+      } else {
+        console.error('Не найдено ни одной камеры.');
+      }
+    }).catch(e => {
+      console.error(e);
+    });
 
-	    function flash(type) {
-	    	let color;
+    function handleQRContent(content) {
+      if(LOGGING)
+        console.log(content);
 
-	    	if(type == 'success')
-	    		color = '#07da63';
-	    	else if (type == 'fail')
-	    		color = '#cc0000';
+      document.querySelector('div').textContent = content; // TODO: REMOVE
 
-	    	document.body.style.backgroundColor = color;
-	    }
-	</script>
+      if(content == 1)
+        flash('success');
+      else if(content == 0)
+        flash('fail');
+
+      sendCode(content);
+    }
+
+    function sendCode(code) {
+      const request = new XMLHttpRequest();
+      const params = `?${ PARAM_NAME }=${ encodeURIComponent(code) }`;
+
+      request.open(REQUEST_METHOD, REMOTE_ADDRESS + params);
+
+      request.send();
+    }
+
+    function flash(type) {
+      let color;
+
+      if(type == 'success')
+        color = '#07da63';
+      else if (type == 'fail')
+        color = '#cc0000';
+
+      document.body.style.backgroundColor = color;
+    }
+
+    function isIos() {
+      return [
+        'iPad Simulator',
+        'iPhone Simulator',
+        'iPod Simulator',
+        'iPad',
+        'iPhone',
+        'iPod'
+      ].includes(navigator.platform)
+      // iPad on iOS 13 detection
+      || (navigator.userAgent.includes("Mac") && "ontouchend" in document)
+    }
+  </script>
 </body>
 </html>
